---------------------------------------------------------------------------------------------------
Version: 6.0.0
Date: ????
  Changes:
    - Add ability to specify a default module configuration for a planner
  Bugfixes:
    - Fixed crash when selecting a module on a row without an assembler selected
---------------------------------------------------------------------------------------------------
Version: 5.2.4
Date: 2021-01-06
  Changes:
    - The gui will stretch when using mods that add a lot of module slots to entities. Up to 10 slots are displayed per row.
---------------------------------------------------------------------------------------------------
Version: 5.2.3
Date: 2021-01-06
  Changes:
    - Pressing E while the gui is open and not pinned will apply the changes, to be in line with vanilla behaviour
    - Don't show Space Exploration's grounded versions of buildings in the gui
---------------------------------------------------------------------------------------------------
Version: 5.2.2
Date: 2020-12-05
  Changes:
    - Added mod setting to change the background of the button between dark and light grey
  Bugfixes:
    - Fixed sprite not updating when toggling the pin button
    - Fixed window closing when toggling the pin button
---------------------------------------------------------------------------------------------------
Version: 5.2.0
Date: 2020-11-23
  Changes:
    - Updated for Factorio 1.1
---------------------------------------------------------------------------------------------------
Version: 5.1.14
Date: 2020-11-15
  Bugfixes:
    - Fixed assembler selection not showing all machines when a mod gets added
---------------------------------------------------------------------------------------------------
Version: 5.1.13
Date: 2020-10-19
  Changes:
    - Using the shortcut or hotkey to get a module inserter takes one from the inventory before creating a new one